# agent-usage-atlas

./: .gitignore  CLAUDE.md  LICENSE  README.md  aggregation.py  generate.py  models.py  parsers.py  pyproject.toml  server.py  template.py
.github/workflows/: ci.yml  publish-homebrew.yml  publish-pypi.yml
docs/: index.html
scripts/: generate_formula.py
src/agent_usage_atlas/: __init__.py  __main__.py  aggregation.py  benchmark_stats.py  benchmark_store.py  builder.py  cli.py  models.py  parsers.py  server.py  template.py
src/agent_usage_atlas/aggregation/: __init__.py  _context.py  budget.py  complexity.py  daily.py  diversity.py  extended.py  insights.py  patterns.py  projects.py  prompts.py  session_cost.py  sessions.py  story.py  token_economy.py  tool_intelligence.py  tool_safety.py  tooling.py  totals.py  trends.py  what_if.py
src/agent_usage_atlas/commands/: __init__.py  _ansi.py  benchmark.py  billing.py  config.py  export.py  generate.py  insights.py  mcp.py  models.py  projects.py  serve.py  sessions.py  summary.py  today.py  tools.py  trends.py  watch.py
src/agent_usage_atlas/frontend/: index.html
src/agent_usage_atlas/frontend/charts/: AiContribution.js  BranchActivity.js  BurnRate.js  CodegenDaily.js  CodegenModel.js  CommandSuccess.js  CostBreakdownChart.js  CostCalendar.js  CostPerTool.js  CostSankey.js  DailyCostChart.js  DailyCostTypeChart.js  DailyTokenChart.js  DailyTurnDuration.js  EfficiencyChart.js  FileTypes.js  Heatmap.js  HourlyTempo.js  ModelCostChart.js  ModelRadar.js  ProductivityChart.js  ProjectRanking.js  RoseChart.js  SessionBubble.js  SessionDuration.js  SourceRadar.js  TaskRate.js  Timeline.js  TokenBurnCurve.js  TokenCalendar.js  TokenSankey.js  ToolBigram.js  ToolDensity.js  ToolRanking.js  TopCommands.js  TurnDuration.js
src/agent_usage_atlas/frontend/components/: CommandPalette.js  CostCards.js  ExpensivePrompts.js  Hero.js  InsightCards.js  LoadingStates.js  SessionTable.js  SourceCards.js  Story.js  VaguePrompts.js
src/agent_usage_atlas/frontend/lib/: chart-factories.js  chart-registry.js  charts.js  i18n.js  keyboard.js  sse.js  store.js  utils.js
src/agent_usage_atlas/frontend/sections/: main.js
src/agent_usage_atlas/frontend/styles/: main.css
src/agent_usage_atlas/parsers/: __init__.py  _base.py  claude.py  codex.py  cursor.py  hermit.py
src/agent_usage_atlas/renderers/: __init__.py  csv_out.py  html.py  json_out.py  ndjson_out.py  prometheus_out.py  tsv_out.py
tests/: test_aggregation.py  test_benchmark_stats.py  test_models.py  test_parsers.py
