[project]
name = "agent-usage-atlas"
version = "0.1.0"
description = "Generate a local dashboard from Codex CLI / Claude Code / Cursor agent logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = ["generate", "models", "parsers", "aggregation", "template", "server"]

[project.scripts]
agent-usage-atlas = "generate:main"
