[project]
name = "agent-usage-atlas"
version = "0.1.0"
description = "Generate a local dashboard from Codex CLI / Claude Code / Cursor agent logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-usage-atlas = "agent_usage_atlas.cli:main"
