[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-usage-atlas"
version = "0.0.2"
description = "Generate a local dashboard from Codex CLI / Claude Code / Cursor agent logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "heggria"},
]
keywords = ["ai", "agent", "dashboard", "token", "cost", "codex", "claude", "cursor", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/heggria/agent-usage-atlas"
Repository = "https://github.com/heggria/agent-usage-atlas"
Issues = "https://github.com/heggria/agent-usage-atlas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_usage_atlas = ["frontend/**/*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.10"]

[project.scripts]
agent-usage-atlas = "agent_usage_atlas.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "agent_usage_atlas.aggregation._context",
    "agent_usage_atlas.aggregation.totals",
    "agent_usage_atlas.aggregation.extended",
    "agent_usage_atlas.aggregation.projects",
    "agent_usage_atlas.aggregation.story",
    "agent_usage_atlas.aggregation.tooling",
    "agent_usage_atlas.parsers.codex",
    "agent_usage_atlas.parsers.claude",
]
disable_error_code = ["var-annotated", "attr-defined", "index", "operator", "call-overload", "arg-type", "assignment", "return-value"]
